--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-  请 <a href="examples/load_from_file/index.html">选择动画文件</a>
+  请 <a href="examples/v2/index.html">选择动画文件(V2)</a>
   <br/>
-  <br/> 或 <a href="examples/multi_brushes/index.html">查看简单动画</a>
+  <br/> 或 <a href="examples/v1/index.html">查看简单动画(V1)</a>
 </body>
 
 </html>
